#3-refactor: 해시태그 변경시 재할당이 아닌 상태 변경으로 고쳤다.