@@ -6,12 +6,11 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import site.syncnote.hashtag.HashTag;
 import site.syncnote.member.Member;
-import site.syncnote.post.posthashtag.PostHashTag;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
 
 @NoArgsConstructor
 @Getter
@@ -23,33 +22,33 @@ public class Post {
     private String title;
     private String content;
     @OneToMany(mappedBy = "post", cascade = CascadeType.ALL, orphanRemoval = true)
-    private List<PostHashTag> hashTags = new ArrayList<>();
+    private List<PostHashTag> postHashTags = new ArrayList<>();
     @ManyToOne
     @JoinColumn(name = "member_id")
     private Member author;
     private boolean deleted;
 
     @Builder
-    public Post(String title, String content, Member author, List<HashTag> hashTags) {
+    public Post(String title, String content, Member author, List<HashTag> postHashTags) {
         this.title = title;
         this.content = content;
         this.author = author;
-        this.hashTags = Objects.isNull(hashTags) ? new ArrayList<>() : addHashTag(hashTags);
+        addHashTag(postHashTags);
         this.deleted = false;
     }
 
-    private List<PostHashTag> addHashTag(List<HashTag> hashTags) {
+    private void addHashTag(List<HashTag> hashTags) {
         if (deleted) {
-            throw new IllegalArgumentException();
+            throw new IllegalArgumentException("삭제된 게시글입니다.");
         }
         verifyHashTags(hashTags);
-        return convertPostHashTag(hashTags);
+        postHashTags = convertPostHashTag(hashTags);
     }
 
     private List<PostHashTag> convertPostHashTag(List<HashTag> hashTags) {
         return hashTags.stream()
             .map(hashTag -> new PostHashTag(this, hashTag))
-            .toList();
+            .collect(Collectors.toList());
     }
 
     public void edit(String title, String content, List<HashTag> hashTags, Long memberId) {
@@ -60,35 +59,37 @@ public class Post {
         verifyHashTags(hashTags);
         this.title = title;
         this.content = content;
-        this.hashTags = mergeOldAndNewTags(hashTags);
+        deleteAndAddHashTags(hashTags);
     }
 
-    private List<PostHashTag> mergeOldAndNewTags(List<HashTag> hashTags) {
-        Stream<PostHashTag> notDeletedTags = findNotDeletedTags(hashTags);
-        Stream<PostHashTag> newTags = convertNewTags(hashTags);
-        return Stream.of(notDeletedTags, newTags)
-            .flatMap(s -> s)
-            .toList();
+    public List<PostHashTag> getPostHashTags() {
+        return postHashTags.stream()
+            .filter(postHashTag -> !postHashTag.isDeleted())
+            .collect(Collectors.toList());
     }
 
-    private Stream<PostHashTag> convertNewTags(List<HashTag> hashTags) {
-        return hashTags.stream()
-            .filter(hashTag -> this.hashTags.stream().map(PostHashTag::getHashTag).noneMatch(ht -> ht.equals(hashTag)))
-            .map(hashTag -> new PostHashTag(this, hashTag));
+    private void deleteAndAddHashTags(List<HashTag> hashTags) {
+        deleteUnUsedTags(hashTags);
+        addNewHashTags(hashTags);
     }
 
-    private Stream<PostHashTag> findNotDeletedTags(List<HashTag> hashTags) {
-        Stream<PostHashTag> notDeltedTags = this.hashTags.stream()
-            .filter(postHashTag -> hashTags.contains(postHashTag.getHashTag()));
-        return notDeltedTags;
+    private void deleteUnUsedTags(List<HashTag> hashTags) {
+        this.postHashTags.stream()
+            .filter(postHashTag -> !hashTags.contains(postHashTag.getHashTag()))
+            .forEach(PostHashTag::delete);
+    }
+
+    private void addNewHashTags(List<HashTag> hashTags) {
+        hashTags.stream()
+            .filter(hashTag -> this.postHashTags.stream().map(PostHashTag::getHashTag).noneMatch(ht -> ht.equals(hashTag)))
+            .map(hashTag -> new PostHashTag(this, hashTag))
+            .forEach(this.postHashTags::add);
     }
 
     public void delete(long memberId) {
         verifyAuthor(memberId, this);
         this.deleted = true;
-        if (!hashTags.isEmpty()) {
-            hashTags.forEach(PostHashTag::delete);
-        }
+        postHashTags.forEach(PostHashTag::delete);
     }
 
     private void verifyAuthor(Long memberId, Post post) {
@@ -102,7 +103,7 @@ public class Post {
     }
 
     private void verifyHashTags(List<HashTag> hashTags) {
-        int oldHashTagSize = this.hashTags.size();
+        int oldHashTagSize = this.postHashTags.size();
         int newHashTagSize = Objects.isNull(hashTags) ? 0 : hashTags.size();
         if (newHashTagSize > 5 || newHashTagSize + oldHashTagSize > 5) {
             throw new IllegalArgumentException("해시태그는 5개까지만 등록할 수 있습니다.");
